tests/snapshots/register_operations_test__all_lowercase_registers.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:9
Lines: 1

Buffer:
wyiw"zyiw[o]rd
