tests/snapshots/register_operations_test__append_multiple_times.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:20
Lines: 1

Buffer:
oyiww"Ayiww"Ayiw$"ap[n]e two three four
