tests/snapshots/register_operations_test__append_to_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:14
Lines: 1

Buffer:
hyiww"Ayiw$"ap[e]llo world test
