tests/snapshots/register_operations_test__append_with_delete.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:10
Lines: 1

Buffer:
hdw"Adw"ap[e]llo world test
