tests/snapshots/register_operations_test__blackhole_register_change.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:14
Lines: 1

Buffer:
Xtwo threeone [ ]
