tests/snapshots/register_operations_test__change_to_named_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:22
Lines: 1

Buffer:
hciwgoodbyeello worldp[ ]
