tests/snapshots/register_operations_test__change_updates_unnamed_but_not_0.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 1

Buffer:
Xhello [w]orldhello
