tests/snapshots/register_operations_test__colon_register_last_command.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Command
Cursor: 0:0
Lines: 1

Buffer:
[t]est
