tests/snapshots/register_operations_test__delete_to_named_register.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:7
Lines: 1

Buffer:
hdw$"ap[e]llo world test
