tests/snapshots/register_operations_test__delete_updates_both_unnamed_and_numbered.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:14
Lines: 1

Buffer:
whello ohello [r]ld
