tests/snapshots/register_operations_test__dot_register_last_insert.snap
---
source: tests/register_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:19
Lines: 1

Buffer:
INSERTEDlinINSERTED[e]
